[package]
name = "annoirc"
version = "0.1.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
egg-mode = { git  = "https://github.com/RAnders00/egg-mode.git", rev = "11dc221533288ebcb1b135c2df65f187a80cd255", features = ["rustls"], default-features = false }
egg-mode-text = { git = "https://github.com/Freaky/egg-mode-text.git", branch = "update-deps" }
futures = "0.3.8"
governor = "0.3.1"
html-escape = "0.2.6"
ip_rfc = "0.1.0"
irc = { git = "https://github.com/aatxe/irc.git", rev = "ed8c163ff9c53ce235bebda10bf703966e5552cb", features = ["serde", "tls-rust"], default-features = false }
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.11"
lru_time_cache = "0.11.2"
mime = "0.3.16"
nonzero_ext = "0.2.0"
regex = "1.4.2"
reqwest = { version = "0.11", features = ["brotli", "cookies", "gzip", "json", "rustls-tls", "rustls-tls-webpki-roots"], default-features = false }
scraper = "0.12.0"
serde = "1.0.117"
serde_json = "1.0.59"
slog = "2.7"
slog-async = "2.5.0"
slog-term = "2.6.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.1", features = ["time", "net"] }
toml = "0.5.7"
unicode-segmentation = "1.7.0"
url = "2.2"
omdb = { git = "https://github.com/Freaky/omdb-rs.git", rev = "7475d916841152c88b7df245bb7459d2a1b18a1a" }
