[package]
name = "annoirc"
version = "0.1.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
egg-mode = { version = "0.16.0", features = ["rustls"], default-features = false }
egg-mode-text = { git = "https://github.com/Freaky/egg-mode-text.git", branch = "update-deps" }
futures = "0.3.8"
governor = "0.4"
html-escape = "0.2.6"
ip_rfc = "0.1.0"
irc = { version = "0.15", features = ["serde", "tls-rust"], default-features = false }
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.11"
lru_time_cache = "0.11.2"
mime = "0.3.16"
nonzero_ext = "0.3.0"
regex = "1.4.2"
reqwest = { version = "0.11", features = ["brotli", "cookies", "gzip", "json", "rustls-tls", "rustls-tls-webpki-roots"], default-features = false }
scraper = "0.12.0"
serde = "1.0.117"
serde_json = "1.0.59"
slog = "2.7"
slog-async = "2.5.0"
slog-term = "2.6.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.1", features = ["time", "net"] }
toml = "0.5.7"
unicode-segmentation = "1.7.0"
url = "2.2"
omdb = "0.3.2"
iso8601-duration = "0.1.0"
rustube = { version = "0.3.2", features = ["std"], default-features = false }
